--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 		<meta name="mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<link href="hyoo/password/logo/logo.svg" rel="icon" />
+		<link rel="manifest" href="hyoo/password/manifest.json">
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://password.hyoo.ru/" />
+		<meta property="og:image" content="hyoo/password/logo/logo.png" />
 	</head>
 	<body mol_view_root>
 		<div mol_view_root="$hyoo_password"></div>
