--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html mol_view_root>
 	<head>
 		<meta charset="utf-8" />
-		<title>$hyoo_password</title>
+		<title>Hyper Password</title>
 		<meta name="description" content="Unique strong password generator">
 		<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
 		<meta name="mobile-web-app-capable" content="yes">
